Fixed overlap and added Samueli logo (not using right now)

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -44,6 +44,9 @@
   text-align: center;
 }
 
+.nav-wrapper > ul {
+  margin-left: 150px;
+}
 
 
 #main-title{
